fio-lab/fio-tool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fio-tools
spec:
  selector:
    matchLabels:
      app: fio-tools
  template:
    metadata:
      labels:
        app: fio-tools
    spec:
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cephrbd
        - name: benchmarks
          emptyDir: {}
        - name: plots
          emptyDir: {}
        containers:
        - name: fio-frontend
          imagePullPolicy: IfNotPresent
          image: artmr/fio-http-server:0.1
          volumeMounts:
          - name: benchmarks
            mountPath: /server/benchmarks
          - name: plots
            mountPath: /server/plots
          ports:
          - containerPort: 8000
