fio-lab/fio-svc-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: fio-tools
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fio-tools
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fio-tools
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: fio-tools
    weight: 100
  wildcardPolicy: None
